--- a/src/Pages/Home/Home.module.css
+++ b/src/Pages/Home/Home.module.css
@@ -4,6 +4,11 @@
 @plugin "daisyui";
 
 
+body {
+    background-image: url('../../assets/images/13114.jpg');
+    @apply h-1/2 w-full;
+}
+
 .mdDiv {
     @apply text-black;
     @apply flex flex-col gap-4;
@@ -24,3 +29,40 @@
 .mdDiv::-webkit-scrollbar-track {
     background: transparent;
 }
+
+.imgAbout {
+    @apply rounded-lg;
+    @apply w-fit h-fit;
+}
+
+.carousel {
+    @apply cursor-pointer;
+    @apply overflow-x-auto;
+    @apply flex-nowrap;
+    @apply cursor-grab;
+    @apply scroll-smooth;
+    @apply w-full;
+    @apply max-w-full;
+}
+
+.aboutCard {
+    @apply bg-white/30 backdrop-blur-md rounded-lg;
+    @apply text-black text-justify text-base font-extralight;
+    @apply m-5 p-6;
+    @apply h-fit w-1/2;
+    @apply shadow-2xl w-[50%];
+}
+
+.aboutContent {
+    @apply h-[30%] w-1/2;
+    @apply p-5;
+}
+
+.card {
+    @apply text-black text-base font-extralight text-center;
+    @apply mt-8;
+    @apply bg-white/50 backdrop-blur-md rounded-lg;
+    @apply cursor-pointer;
+}
+
+.cardTitle {}
